--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": [
+    "carrot",
+    "carrotdb",
+    "database",
+    "nodejs database engine"
+  ],
+  "author": "Rondeo",
+  "license": "ISC",
+  "dependencies": {
+    "underscore": "^1.10.2"
+  }
 }
